# raiffeisen_to_zenmoney

./: .dockerignore  .gitignore  Dockerfile  config.sample.yaml  pyproject.toml
.github/workflows/: docker.yml
src/: config.py  envs.py  main.py
src/services/emails_statements/: getter.py  statement.py
src/services/operations/: filter.py  operations.py  preparer.py
src/services/zen_money/: preparer.py  zen_money_api.py
