[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raiffeisen-to-zenmoney"
version = "0.1.0"
description = "Convert Raiffeisen bank statements to Zen Money"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
